# prelude-polysemy

./: .dir-locals.el  .gitignore  brittany.yaml  default.nix  overlay.nix  prelude-polysemy.cabal  release.nix  shell.nix
nix/: sources.json
src/: Prelude.hs
src/Prelude/: Time.hs
src/Prelude/Control/: Error.hs  Log.hs
src/Prelude/Polysemy/: ID.hs
