cabal-version:       2.2
name:                prelude-polysemy
version:             0.1.0.0
synopsis: Common utils.
license:        BSD-3-Clause
license-file:        LICENSE
author:              Ashesh Ambasta
maintainer:          ashesh.ambasta@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library 
  hs-source-dirs: src
  build-depends: 
      base-noprelude 
    , protolude
    , monad-log 
    , polysemy
    , text
    , lens
    , http-types >= 0.12.3
    , pretty-simple
    , time

  exposed-modules: 
      Prelude 
      Prelude.Control.Log 
      Prelude.Control.Error 
      Prelude.Time 
      Paths_prelude_polysemy
  -- other-modules: Paths_prelude

  default-language: Haskell2010
  default-extensions: 
      DeriveGeneric
      FlexibleContexts
      FlexibleInstances
      GADTs
      InstanceSigs
      LambdaCase
      MultiParamTypeClasses
      NoImplicitPrelude
      OverloadedStrings
      PackageImports
      RecordWildCards
      ScopedTypeVariables
      TupleSections
      TypeApplications
      TypeSynonymInstances
      ViewPatterns

  ghc-options:        -Wall -threaded -Wno-unused-do-bind

  if impl(ghcjs -any)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER

  default-language:   Haskell2010

  if os(osx)
    ghc-options: -dynamic
   